plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.12'
	id 'io.spring.dependency-management' version '1.1.4'
	id 'jacoco'
}

group = 'com.golfcomp'
// Version is inherited from root project's Git tag-based versioning
version = rootProject.version

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
	implementation 'org.liquibase:liquibase-core'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'org.postgresql:postgresql'
	runtimeOnly 'com.h2database:h2'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

// Suppress the plain JAR — Spring Boot produces the executable fat JAR.
// Without this, Gradle generates both app.jar and app-plain.jar, which
// causes `cp *.jar` in the deploy script to fail.
jar {
	enabled = false
}

// Embed Vue frontend into the JAR as static assets.
// vue-golfcomp/dist/ is copied to BOOT-INF/classes/static/ so Spring Boot
// serves the SPA at / alongside the API at /api/v1/**.
tasks.named('processResources') {
	from("${rootProject.projectDir}/vue-golfcomp/dist") {
		into('static')
	}
	dependsOn(rootProject.tasks.named('frontendBuild'))
}

test {
	useJUnitPlatform()
	testLogging {
		events "passed", "skipped", "failed"
		showExceptions true
		showCauses true
		showStackTraces = true
	}
	finalizedBy jacocoTestReport
}

jacoco {
	toolVersion = "0.8.12"
}

jacocoTestReport {
	dependsOn test
	reports {
		xml.required = true
		html.required = true
		csv.required = false
	}
}
